--- a/Frontend/src/assets/css/main.css
+++ b/Frontend/src/assets/css/main.css
@@ -35,9 +35,10 @@ html,
   margin: auto;
   background: #ffffff;
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 40px 55px 45px 55px;
+  padding: 20px 45px 20px 45px;
   border-radius: 15px;
   transition: all 0.3s;
+  margin-top: 150px;
 }
 
 .vertical-center .form-control:focus {
